syntax = "proto3";

package demo;

import "demo/language.proto";

import "google/protobuf/wrappers.proto";

message HelloRequest {
  reserved 3;
  string name = 1;
  demo.Language lang = 2;
  int32 requiredInt = 4;
  google.protobuf.Int32Value int = 5;
}
