syntax = "proto3";

package demo;

import "google/protobuf/wrappers.proto";

import "demo/use_api_struct.proto";

message HelloResponse {
  string message = 1;
  google.protobuf.UInt64Value size = 2;
  demo.UseApiStruct apiStruct = 3;
}
